# recoll-http-api

./: .dockerignore  .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  config.yml  makefile  recollindex-dev.sh  recollq-dev.sh
src/: api_key.rs  api_key_guard.rs  bin_serve.rs  bin_update.rs  build.rs  command.rs  config.rs  deserialize.rs  endpoint_about.rs  endpoint_list.rs  endpoint_query.rs  file_index.rs  index_repo.rs  recollq_output.rs  search_results.rs
