[package]
name = "windexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "windexer-serve"
path = "src/bin_serve.rs"

[[bin]]
name = "windexer-update"
path = "src/bin_update.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
actix-web = "4"
actix-web-httpauth = "0.8.0"
async-process = "1.6.0"
base64 = "0.21"
futures = "0.3.26"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"