[package]
name = "findex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "findex-serve"
path = "src/bin_serve.rs"

[[bin]]
name = "findex-update"
path = "src/bin_update.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
actix-web = "4"
actix-web-httpauth = "0.8.0"
async-process = "1.6.0"
base64 = "0.21"
futures = "0.3.26"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10"
envy = "0.4"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
once_cell = "1.17.0"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"